[package]
name = "local-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
indicatif = "0.17.6"
requestty = "0.5.0"
zeroconf = "0.11.1"


[[bin]]
name = "sender"
path = "./src/sender.rs"

[[bin]]
name = "receiver"
path = "./src/receiver.rs"
